docs: added the year and the name of the course

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@ HTML
        <div id="footer">
        <div id="footer1">
        <a href="https://app.rs.school"><img src="https://yt3.ggpht.com/ytc/AAUvwniOikvGkMN3TGIgCT-QBZ1vdJQ2MYDWBwAIgnRU=s900-c-k-c0x00ffffff-no-rj" alt="Rolling Scopes School Logo" class="jsx-2038483508 header-logo" style=" height="75" width="75"></a> </div>
-   
+   <div id="footer4">
+<p5>2022 JS/FE Pre-School 2022</p5>
+   </div>
    
    <div id="footer3">
      <p2><a href="https://github.com/slavanil/rsschool-cv.git">GitHub: SlavaNil</a></li><br>
