docs: added the year and the name of the course

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>rsschool-cv</title>
-    <link rel="icon" href="/NVS.png" type="image/png" sizes="64x64">
+    <link rel="icon" href="NVS.png" type="image/png" sizes="64x64">
 
    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
