docs: error correction

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <body>
  <header> 
  <div id="header">
-    <div id="left"><a href="https://app.rs.school"><img src="https://yt3.ggpht.com/ytc/AAUvwniOikvGkMN3TGIgCT-QBZ1vdJQ2MYDWBwAIgnRU=s900-c-k-c0x00ffffff-no-rj" alt="Rolling Scopes School Logo" class="jsx-2038483508 header-logo" style= height="50" width="50"></a></div>
+    <div id="left"><a href="https://app.rs.school"><img src="https://yt3.ggpht.com/ytc/AAUvwniOikvGkMN3TGIgCT-QBZ1vdJQ2MYDWBwAIgnRU=s900-c-k-c0x00ffffff-no-rj" alt="Rolling Scopes School Logo" class="jsx-2038483508 header-logo" height="50" width="50"></a></div>
     
      <div id="right">
        <div class="box-1"><h3>Contact</h3></div>
@@ -46,7 +46,7 @@
   <div id="midlebody">
     <div id="blocklogo">
        <center> <div id="Photo">
-       <a href="https://slavanil.github.io/rsschool-cv/cv"><img <a href="https://ibb.co/svNDpTw"><img src="https://i.ibb.co/BVQ7HhZ/unknown-1.png" alt="unknown-1" border="0" style=height="200" width="300"></a>
+       <a href="https://slavanil.github.io/rsschool-cv/cv"><img <a href="https://ibb.co/svNDpTw"><img src="https://i.ibb.co/BVQ7HhZ/unknown-1.png" alt="unknown-1" border="0" height="200" width="200"></a>
        <h1>Viachaslau Navoichyk</h1>
        </center>
     </div>
@@ -135,7 +135,7 @@ HTML
 
   <div id="footer">
     <div id="footer1"><a href="https://app.rs.school">
-      <img src="https://yt3.ggpht.com/ytc/AAUvwniOikvGkMN3TGIgCT-QBZ1vdJQ2MYDWBwAIgnRU=s900-c-k-c0x00ffffff-no-rj" alt="Rolling Scopes School Logo" class="jsx-2038483508 header-logo" style=height="75" width="75"></a>
+      <img src="https://yt3.ggpht.com/ytc/AAUvwniOikvGkMN3TGIgCT-QBZ1vdJQ2MYDWBwAIgnRU=s900-c-k-c0x00ffffff-no-rj" alt="Rolling Scopes School Logo" class="jsx-2038483508 header-logo" height="75" width="75"></a>
     </div>
 
     <div id="footer4"><p5><br>2022 JS/FE Pre-School 2022</p5>
