--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ HTML
       <img src="https://yt3.ggpht.com/ytc/AAUvwniOikvGkMN3TGIgCT-QBZ1vdJQ2MYDWBwAIgnRU=s900-c-k-c0x00ffffff-no-rj" alt= "Rolling Scopes School Logo" class="jsx-2038483508 header-logo" height="75" width="75"></a>
     </div>
 
-    <div id="footer4"><p5> <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022 JS/FE Pre-School 2022</h2> </p5>
+    <div id="footer4"><p5> <h3>&nbsp;&nbsp;2022 JS/FE Pre-School 2022</h3> </p5>
     </div>
    
     <div id="footer3">
@@ -164,7 +164,7 @@ HTML
       </ul>
     </div>
 
-    <div id="footer3"><h5><a href="https://rs.school/js/"> The Rolling Scopes School</a></h5>
+    <div id="footer3"><h6><a href="https://rs.school/js/"> The Rolling Scopes School</a></h6>
     </div>
 
     <div id="footer2">
